# kani-chan

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/2023-06-13-151631_create_events/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/commands/: event.rs  mod.rs  search.rs
src/database/: events.rs
xivapi-rust/: Cargo.toml
xivapi-rust/src/: lib.rs
