[package]
name = "kani-chan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
serenity = { version = "0.11.5", features = ["collector"]}
tokio = { version = "1.28.2", features = ["full"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
xivapi-rust = { path = "./xivapi-rust" }

[workspace]
members = [
    "xivapi-rust"
]